@@ -9,20 +9,25 @@ import java.util.stream.Collectors;
 public class StringMethods {
 
     public static void main(String[] args) throws IOException {
+
+        //--------- method: List<String> s.lines()   & s.strip()
         String multilineString = "Baeldung helps \n \n developers \n explore Java.";
         List<String> lines = multilineString.lines()
                 .filter(line -> !line.isBlank())
                 .map(String::strip) // like trim() but with finer control
-                .collect(Collectors.toList());
+                .toList();
 
         //assertThat(lines).containsExactly("Baeldung helps", "developers", "explore Java.");
 
+        // ------------s.repeat(int times)
+        String str = "=".repeat(10);
+        System.out.println(str); //prints ===========
 
-        String str = "=".repeat(2);
-        System.out.println(str); //prints ==
+
+        //--------------- Files.writeString(Path, CharSeq) & Files.readString(path)
 
         Path path = Files.writeString(Files.createTempFile("test", ".txt"), "This was posted on JD");
-        System.out.println(path);
+        System.out.println(path); // /tmp/test3551438729359894505.txt
         String s = Files.readString(path);
         System.out.println(s); //This was posted on JD
     }
